[package]
name = "riven-vfs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
fuser = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }

[lints]
workspace = true
